--- a/_includes/post-paginator.html
+++ b/_includes/post-paginator.html
@@ -47,7 +47,7 @@
         <li class="page-item {% if i == paginator.page %} active{% endif %}">
           <a
             class="page-link"
-            href="{% if i > 1 %}{{ '/page' | append: i | append: '/' | relative_url }}{% else %}{{ '/' | relative_url }}{% endif %}"
+            href="{% if i > 1 %}{{ '/blog/page' | append: i | append: '/' | relative_url }}{% else %}{{ '/blog/' | relative_url }}{% endif %}"
           >
             {{- i -}}
           </a>
