--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,7 +1,6 @@
 ---
-layout: default
+layout: page
 title: Welecome
-refactor: true
 ---
 {% include lang.html %}
 
@@ -28,13 +27,13 @@ refactor: true
 {% assign featured_project = site.data.projects.featured | first %}
 <section class="featured-project py-5">
   <div class="container">
-    <h1 class="mb-4">Featured Project</h1>
+    <h1 class="mb-4">🚀 Featured Project</h1>
     <div class="row align-items-center">
       <div class="col-md-6 mb-4 mb-md-0">
-    <img src="{{ featured_project.image }}" alt="{{ featured_project.title }} Screenshot"
-         class="img-fluid rounded shadow loading-animation"
+      <img src="{{ featured_project.image }}" alt="{{ featured_project.title }} Screenshot"
+         class="img-fluid rounded shadow"
          style="object-fit: cover; width: 100%; aspect-ratio: 16/9; background: #222;"
-         onload="this.classList.remove('loading-animation');">
+         onload="this.classList.remove('shimmer');">
       </div>
       <div class="col-md-6">
         <h2>{{ featured_project.emoji }} {{ featured_project.title }}</h2>
