My dream website

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
   {{ seo_tags }}
 
   <title>
-    {%- unless page.layout == 'home' -%}
+    {%- unless page.layout == 'landing' -%}
       {{ page.title | append: ' | ' }}
     {%- endunless -%}
     {{ site.title }}
