--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -9,33 +9,78 @@
       {% assign paths = page.url | split: '/' %}
 
       {% if paths.size == 0 or page.layout == 'landing' %}
-        <!-- index page -->
         <span>{{ site.data.locales[include.lang].tabs.home | capitalize }}</span>
-
       {% else %}
-        {% for item in paths %}
-          {% if forloop.first %}
-            <span>
-              <a href="{{ '/' | relative_url }}">
-                {{- site.data.locales[include.lang].tabs.home | capitalize -}}
-              </a>
-            </span>
+        {% if page.layout == 'post' %}
+          <span>
+            <a href="{{ '/' | relative_url }}">
+              {{ site.data.locales[include.lang].tabs.home | capitalize }}
+            </a>
+          </span>
+          <span>
+            <a href="{{ '/blog/' | relative_url }}">
+              Blog
+            </a>
+          </span>
+          <span>{{ page.title }}</span>
 
-          {% elsif forloop.last %}
-            {% if page.collection == 'tabs' %}
-              <span>{{ site.data.locales[include.lang].tabs[item] | default: page.title }}</span>
-            {% else %}
-              <span>{{ page.title }}</span>
+        {% elsif page.layout == 'home' %}
+          <span>
+            <a href="{{ '/' | relative_url }}">
+              {{ site.data.locales[include.lang].tabs.home | capitalize }}
+            </a>
+          </span>
+          <span>Blog</span>
+
+        {% elsif page.layout == 'category' %}
+          <span>
+            <a href="{{ '/' | relative_url }}">
+              {{ site.data.locales[include.lang].tabs.home | capitalize }}
+            </a>
+          </span>
+          <span>
+            <a href="{{ '/blog/' | relative_url }}">
+              Blog
+            </a>
+          </span>
+          <span>{{ page.title }}</span>
+
+        {% elsif page.layout == 'tag' %}
+          <span>
+            <a href="{{ '/' | relative_url }}">
+              {{ site.data.locales[include.lang].tabs.home | capitalize }}
+            </a>
+          </span>
+          <span>
+            <a href="{{ '/blog/' | relative_url }}">
+              Blog
+            </a>
+          </span>
+          <span>{{ page.title }}</span>
+
+        {% else %}
+          {% for item in paths %}
+            {% if forloop.first %}
+              <span>
+                <a href="{{ '/' | relative_url }}">
+                  {{ site.data.locales[include.lang].tabs.home | capitalize }}
+                </a>
+              </span>
+            {% elsif forloop.last %}
+              {% if page.collection == 'tabs' %}
+                <span>{{ site.data.locales[include.lang].tabs[item] | default: page.title }}</span>
+              {% else %}
+                <span>{{ page.title }}</span>
+              {% endif %}
+            {% elsif page.layout == 'category' or page.layout == 'tag' %}
+              <span>
+                <a href="{{ item | append: '/' | relative_url }}">
+                  {{ site.data.locales[include.lang].tabs[item] | default: page.title }}
+                </a>
+              </span>
             {% endif %}
-
-          {% elsif page.layout == 'category' or page.layout == 'tag' %}
-            <span>
-              <a href="{{ item | append: '/' | relative_url }}">
-                {{- site.data.locales[include.lang].tabs[item] | default: page.title -}}
-              </a>
-            </span>
-          {% endif %}
-        {% endfor %}
+          {% endfor %}
+        {% endif %}
       {% endif %}
     </nav>
     <!-- endof #breadcrumb -->
