--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 # All the Categories of posts
+permalink: /blog/categories
 ---
 
 {% include lang.html %}
@@ -106,7 +107,7 @@ layout: page
               <li class="list-group-item">
                 <i class="far fa-folder fa-fw"></i>
 
-                {% capture _sub_ctg_url %}/categories/{{ sub_category | slugify | url_encode }}/{% endcapture %}
+                {% capture _sub_ctg_url %}/blog/categories/{{ sub_category | slugify | url_encode }}/{% endcapture %}
                 <a href="{{ _sub_ctg_url | relative_url }}" class="mx-2">{{ sub_category }}</a>
 
                 {% assign posts_size = site.categories[sub_category] | size %}
