--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,6 +51,18 @@ pagination:
   {% endfor %}
 {% endif %}
 
+<div class="mb-4 d-flex gap-3">
+  <a href="{{ '/blog/tags/' | relative_url }}" class="text-decoration-none">
+    <i class="fas fa-tags me-1"></i> Tags
+  </a>
+  <a href="{{ '/blog/categories/' | relative_url }}" class="text-decoration-none">
+    <i class="fas fa-folder-open me-1"></i> Categories
+  </a>
+  <a href="{{ '/blog/archives/' | relative_url }}" class="text-decoration-none">
+    <i class="fas fa-archive me-1"></i> Archives
+  </a>
+</div>
+
 <div id="post-list" class="flex-grow-1 px-xl-1">
   {% for post in posts %}
     <article class="card-wrapper card">
