--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 # All the Tags of posts.
+permalink: /blog/tags
 ---
 
 <div id="tags" class="d-flex flex-wrap mx-xl-2">
@@ -13,7 +14,7 @@ layout: page
 
   {% for t in sorted_tags %}
     <div>
-      <a class="tag" href="{{ t | slugify | url_encode | prepend: '/tags/' | append: '/' | relative_url }}">
+      <a class="tag" href="{{ t | slugify | url_encode | prepend: '/blog/tags/' | append: '/' | relative_url }}">
         {{ t -}}
         <span class="text-muted">{{ site.tags[t].size }}</span>
       </a>
