--- a/_includes/pageviews/goatcounter.html
+++ b/_includes/pageviews/goatcounter.html
@@ -14,7 +14,7 @@
           pv.innerText = new Intl.NumberFormat().format(count);
         })
         .catch((error) => {
-          pv.innerText = '1';
+          pv.innerText = 'Turn off adblocker to see';
         });
     }
   });
