--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,20 @@
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1b1b1e">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ '/feed.xml' | relative_url }}">
   <meta
     name="viewport"
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
   >
+  <!-- RSS Feed -->
+  <link rel="alternate" type="application/rss+xml"
+        title="{{ site.title | xml_escape }}"
+        href="{{ '/rss.xml' | absolute_url }}" />
+
+  <!-- Atom Feed -->
+  <link rel="alternate" type="application/atom+xml"
+        title="{{ site.title | xml_escape }}"
+        href="{{ '/atom.xml' | absolute_url }}" />
+
 
   {%- capture seo_tags -%}
     {% seo title=false %}
