--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -72,7 +72,7 @@
             mailto:{{ email[0] }}@{{ email[1] }}
           {%- endcapture -%}
         {% when 'rss' %}
-          {% assign url = '/feed.xml' | relative_url %}
+          {% assign url = '/rss.xml' | relative_url %}
         {% else %}
           {% assign url = entry.url %}
       {% endcase %}
