--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -169,3 +169,6 @@ body[data-mode="light"],
   </div>
 </section>
 {% endif %}
+
+<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//lakshyasinghchauhan.com/rss.xml"><img src="https://lakshya-img.netlify.app/valid-rss-rogers.png" alt="[Valid RSS]" title="Validate my RSS feed" /></a>
+<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//lakshyasinghchauhan.com/atom.xml"><img src="https://lakshya-img.netlify.app/valid-atom.png" alt="[Valid Atom 1.0]" title="Validate my Atom 1.0 feed" /></a
