--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 # All the Categories of posts
-permalink: /blog/categories
+permalink: /blog/categories/
 ---
 
 {% include lang.html %}
