--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 # All the Tags of posts.
-permalink: /blog/tags
+permalink: /blog/tags/
 ---
 
 <div id="tags" class="d-flex flex-wrap mx-xl-2">
